# whatsapp-insurance-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/skills/whatsapp-insurance-pipeline/: SKILL.md
.claude/skills/whatsapp-insurance-pipeline/references/: data_profile.md  databricks_setup.md  entities.md  glossary.md  gold_insights.md  overview.md  pii_masking.md  schema.md  transformations.md
.github/workflows/: ci.yml
agent/: __init__.py  supervisor.py
docs/: PROJECT_PLAN.md  SESSION_STATE.md  decisions.md  deploy.md
docs/plans/: 00-project-overview.md  01-bronze-fixes.md  02-day2-silver.md  README.md
notebooks/: 01_bronze_ingest.py  02_silver_transform.py  03_gold_refresh.py  04_agent_supervisor.py
scripts/: generate_test_parquet.py  smoke_bronze.py
src/: __init__.py  gemini.py  pii.py  profiling.py  schema.py
tests/: conftest.py  test_pii.py  test_profiling.py  test_schema.py
