[project]
name = "whatsapp-insurance-agent"
version = "0.1.0"
description = "Agentic medallion data pipeline for WhatsApp auto-insurance sales conversations"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Brom", email = "daniel.brom@vtex.com" }]
keywords = ["databricks", "delta-lake", "medallion", "agent", "whatsapp", "gemini", "pyspark"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -v --strict-markers"
